--- a/package.json
+++ b/package.json
@@ -49,12 +49,16 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "uuid": "^9.0.1"
   }
 }
