--- a/package.json
+++ b/package.json
@@ -51,9 +51,13 @@
   "dependencies": {
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
+    "aws-sdk": "^2.1542.0",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
