--- a/package.json
+++ b/package.json
@@ -49,15 +49,17 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.499.0",
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "aws-sdk": "^2.1542.0",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
