--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: node ./server/sever.js
+    command: npx nodemon ./server/sever.js
     depends_on:
       - db
 
