--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,16 @@ services:
     depends_on:
       - db
 
+  webpack-dev-server:
+    image: node
+    ports:
+      - "3001:3001"
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: npm start
+    environment:
+      - NODE_ENV=development
   db:
     image: postgres
     environment:
