--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
