--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,8 @@ services:
     image: postgres
     environment:
       POSTGRES_PASSWORD: dkrlaos1
+      POSTGRES_USER: karina
     ports:
       - "5432:5432"
+    volumes:
+      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
