--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: postgres
     environment:
       POSTGRES_PASSWORD: dkrlaos1
-      POSTGRES_USER: karina
+      POSTGRES_USER: kimjongyoon
     ports:
       - "5432:5432"
     volumes:
