--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       POSTGRES_PASSWORD: dkrlaos1
       POSTGRES_USER: kimjongyoon
+      POSTGRES_DB: karina
     ports:
       - "5432:5432"
     volumes:
