--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
+    "nginx": "^1.0.8",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-cookie": "^7.0.2",
