--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+http{
 server {
     listen 443 ssl;
     server_name jangkasulyoo.site;
@@ -5,12 +6,15 @@ server {
     
 
     location / {
-      karina-project/dist
+      root /home/ubuntu/karina-project/dist;
+
         try_files $uri $uri/ /index.bundle.js;
     }
 
     # HTTP 요청을 HTTPS로 리다이렉트
     listen 80;
-    server_name yourdomain.com;
+    server_name jangkasulyoo.com;
     return 301 https://$server_name$request_uri;
+}
+
 }
