--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,18 @@
-http{
-server {
-    listen 80;
-    server_name jangkasulyoo.site;
+# http{
+# server {
+#     listen 80;
+#     server_name jangkasulyoo.site;
 
     
 
-    location / {
-      root /home/ubuntu/karina-project/dist;
+#     location / {
+#       root /home/ubuntu/karina-project/dist;
 
-        try_files $uri $uri/ /index.bundle.js;
-    }
+#         try_files $uri $uri/ /index.bundle.js;
+#     }
 
     
    
-}
+# }
 
-}
+# }
