--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,15 +10,15 @@ services:
     command: npx nodemon ./server/sever.js
     depends_on:
       - db
-  nginx:
-    image: nginx:latest
-    ports:
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./dist:/usr/share/nginx/html
-    depends_on:
-      - app
+  # nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+  #     - ./dist:/usr/share/nginx/html
+  #   depends_on:
+  #     - app
   db:
     image: postgres
     environment:
