ORM createConnection 안쓰고, DataSource 로 변경, ts로 백엔드 로직 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: npx nodemon ./server/sever.js
+    command: npx nodemon --exec ts-node ./server/server.ts
     depends_on:
       - db
-  
+    environment:
+      - NODE_ENV=development
+
   webpack-dev-server:
     image: node
     ports:
