--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,23 +1,23 @@
-version: "3.8"
-services:
-  app:
-    image: node
-    ports:
-      - "4000:4000"
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: npx nodemon ./server/sever.js
-    depends_on:
-      - db
+# version: "3.8"
+# services:
+#   app:
+#     image: node
+#     ports:
+#       - "4000:4000"
+#     volumes:
+#       - .:/app
+#     working_dir: /app
+#     command: npx nodemon ./server/sever.js
+#     depends_on:
+#       - db
 
-  db:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: dkrlaos1
-      POSTGRES_USER: kimjongyoon
-      POSTGRES_DB: karina
-    ports:
-      - "5432:5432"
-    volumes:
-      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
+#   db:
+#     image: postgres
+#     environment:
+#       POSTGRES_PASSWORD: dkrlaos1
+#       POSTGRES_USER: kimjongyoon
+#       POSTGRES_DB: karina
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
