--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js &&tsc",
+    "build": "webpack --config webpack.config.js ",
     "start": "webpack-dev-server",
     "server": "nodemon --watch server --exec ts-node server/server.ts",
     "compile": "tsc"
