이메일 전송 로직

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.14",
@@ -58,6 +59,7 @@
     "@ffmpeg/ffmpeg": "^0.12.10",
     "aws-sdk": "^2.1542.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -68,6 +70,7 @@
     "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
     "nginx": "^1.0.8",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-cookie": "^7.0.2",
