--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
       - "4000:4000"
     volumes:
       - .:/app
+      - /app/node_modules
     working_dir: /app
-    command: npx nodemon --exec ts-node ./server/server.ts
+    command: /bin/sh -c "npm install && npx nodemon --exec ts-node ./server/server.ts"
     depends_on:
       - db
     environment:
@@ -19,8 +20,9 @@ services:
       - "3001:3001"
     volumes:
       - .:/app
+      - /app/node_modules # 이 라인도 동일하게 추가하여 호스트의 node_modules와 분리
     working_dir: /app
-    command: npm start
+    command: /bin/sh -c "npm install && npm start"
     environment:
       - NODE_ENV=development
   db:
