--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "3001:3001"
     volumes:
       - .:/app
-      - /app/node_modules # 이 라인도 동일하게 추가하여 호스트의 node_modules와 분리
+      - /app/node_modules
     working_dir: /app
     command: /bin/sh -c "npm install && npm start"
     environment:
