--- a/package.json
+++ b/package.json
@@ -58,13 +58,15 @@
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "aws-sdk": "^2.1542.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -72,6 +74,8 @@
     "mysql": "^2.18.1",
     "nginx": "^1.0.8",
     "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-naver": "^1.0.6",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-cookie": "^7.0.2",
