--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-router-dom": "^6.20.1",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.37.1",
+    "socket.io": "^4.7.5",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   }
