--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.5",
     "typeorm": "^0.3.20",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.2"
   }
 }
