--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
