--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "passport-naver": "^1.0.6",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
