--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   app:
     build: .
@@ -6,11 +5,16 @@ services:
       - "4000:4000"
     volumes:
       - .:/app
-      - /app/node_modules
+
     working_dir: /app
-    command: /bin/sh -c "npm run compile&& npm run build && npm run migration:run && npm run start"
+    command: /bin/sh -c "npm run build:server&& npm run build && npm run start"
     environment:
       - NODE_ENV=development
+        - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=kimjongyoon
+      - DB_PASSWORD=dkrlaos1
+      - DB_NAME=postgres
     depends_on:
       - db
 
