--- a/tsconfig.backEnd.json
+++ b/tsconfig.backEnd.json
@@ -14,6 +14,6 @@
     "emitDecoratorMetadata": true, // 이 옵션을 추가
     "experimentalDecorators": true // 이 옵션을 추가
   },
-  "include": ["server", "ORM", "migration"],
+  "include": ["server", "ORM", "ORM/migrations/**/*.ts"],
   "exclude": ["node_modules", "src"]
 }
