--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .:/app
 
     working_dir: /app
-    command: /bin/sh -c "npm run migration:generate && npm run migration:run && npm run start"
+    command: /bin/sh -c "npm run migration:generate && npm run migration:run&&npm run build:server && npm run build  && npm run start"
     environment:
       - NODE_ENV=development
       - DB_HOST=db
