--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "node dist/server/server.js",
-    "build:server": " NODE_OPTIONS='--max-old-space-size=4096' tsc --project tsconfig.backEnd.json",
+    "build:server": "node --max-old-space-size=2048 node_modules/.bin/tsc --project tsconfig.backEnd.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate -d ./ORM/index.ts ./ORM/migrations/CreateMigration",
     "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./ORM/index.ts"
