--- a/package.json
+++ b/package.json
@@ -54,16 +54,17 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.499.0",
+    "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/credential-providers": "^3.592.0",
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "aws-sdk": "^2.1623.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "browser-image-compression": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
