--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - /app/node_modules
       - ~/.aws:/root/.aws
     working_dir: /app
-    command: /bin/sh -c "npm install && npx nodemon --exec ts-node ./server/server.ts"
+    command: /bin/sh -c "./entrypoint.sh app"
     depends_on:
       - db
     environment:
@@ -25,7 +25,7 @@ services:
       - /app/node_modules
       - ~/.aws:/root/.aws
     working_dir: /app
-    command: /bin/sh -c "npm install && npm start"
+    command: /bin/sh -c "./entrypoint.sh webpack-dev-server"
     environment:
       - NODE_ENV=development
       - AWS_SDK_LOAD_CONFIG=1
