--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
     "@aws-sdk/credential-providers": "^3.592.0",
+    "@aws-sdk/s3-request-presigner": "^3.592.0",
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "aws-sdk": "^2.1623.0",
