--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js ",
-    "start": "webpack-dev-server",
-    "server": "nodemon --watch server --exec ts-node server/server.ts",
-    "compile": "tsc"
+    "clean": "rimraf ./dist",
+    "build": "webpack",
+    "start": "node dist/server/server.js",
+    "build:server": "node --max-old-space-size=2048 node_modules/.bin/tsc --project tsconfig.backEnd.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate -d ./ORM/index.ts ./ORM/migrations/CreateMigration",
+    "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./ORM/index.ts",
+    "migration:run:prod": "node ./node_modules/typeorm/cli.js migration:run -d dist/ORM/index.js"
   },
   "repository": {
     "type": "git",
