--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate -d ./ORM/index.ts ./ORM/migrations/CreateMigration",
     "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./ORM/index.ts",
-    "migration:run:prod": "node ./node_modules/typeorm/cli.js migration:run -d dist/ORM/index.js"
+    "migration:run:prod": "node ./node_modules/typeorm/cli.js migration:run -d dist/ORM/ormconfig.prod.js"
   },
   "repository": {
     "type": "git",
