--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist",
+    "start:dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "stop:dev": "docker-compose -f docker-compose.dev.yml down",
     "build": "webpack",
     "start": "node dist/Back-end/server/server.js",
+    "start:dev:front": "webpack-dev-server",
+    "start:dev:back": "nodemon --watch Back-end/server --exec ts-node Back-end/server/server.ts",
     "build:server": "node --max-old-space-size=2048 node_modules/.bin/tsc --project tsconfig.backEnd.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate -d ./ORM/index.ts ./ORM/migrations/CreateMigration",
@@ -38,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "eslint": "^8.55.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-import": "^2.29.0",
