--- a/tsconfig.backEnd.json
+++ b/tsconfig.backEnd.json
@@ -14,8 +14,8 @@
     "emitDecoratorMetadata": true, // 이 옵션을 추가
     "experimentalDecorators": true // 이 옵션을 추가
   },
-  "include": ["server", "ORM", "ORM/migrations/**/*.ts"],
-  "exclude": ["node_modules", "src"]
+  "include": ["Back-end", "ORM", "ORM/migrations/**/*.ts"],
+  "exclude": ["node_modules", "src", "server", "Front-end"]
 }
 
 //   //* 배포 할떄 쓰는 ts , 배포할때 ts-node를 버리고 컴파일을 해야한다.
