--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .:/app
       - ~/.aws:/root/.aws
     working_dir: /app
-    command: /bin/sh -c "npm run clean&&npm install &&npm run build && npm run migration:generate&&npm run build:server && npm run migration:run:prod  && npm run start"
+    command: /bin/sh -c "npm run clean&&npm install &&npm run build &&npm run build:server && npm run migration:run:prod && npm run start"
     environment:
       - NODE_ENV=production
       - DB_HOST=db
